<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3EEF8"
    tools:context=".InterfazPago">

    <TextView
        android:id="@+id/txt_result_producto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_product"
        android:textAlignment="center"
        android:textColor="#232425"
        android:textSize="21sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_simbolo5"
        app:layout_constraintStart_toEndOf="@+id/txt_result_cantidad"
        app:layout_constraintTop_toBottomOf="@+id/txt_total_pago"
        app:layout_constraintVertical_bias="0.221"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_result_subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/subtotal"
        android:textAlignment="textEnd"
        android:textColor="#232425"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.749"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_result_precio_unidad"
        app:layout_constraintVertical_bias="0.115"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_result_descuento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/desc"
        android:textAlignment="textEnd"
        android:textColor="#232425"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_simbolo2"
        app:layout_constraintHorizontal_bias="0.992"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_result_subtotal"
        app:layout_constraintVertical_bias="0.171"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_simbolo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/simbolo_porcentaje"
        android:textAlignment="viewStart"
        android:textColor="#676f73"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_result_subtotal"
        app:layout_constraintVertical_bias="0.178" />

    <TextView
        android:id="@+id/txt_simbolo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/simbolo_pesos"
        android:textAlignment="textEnd"
        android:textColor="#676f73"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_result_total"
        app:layout_constraintHorizontal_bias="0.996"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_result_descuento"
        app:layout_constraintVertical_bias="0.173" />

    <TextView
        android:id="@+id/txt_simbolo4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/simbolo_pesos"
        android:textAlignment="textEnd"
        android:textColor="#676f73"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_result_subtotal"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toEndOf="@+id/txt_subtotal"
        app:layout_constraintTop_toBottomOf="@+id/txt_result_precio_unidad"
        app:layout_constraintVertical_bias="0.115" />

    <TextView
        android:id="@+id/txt_simbolo5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/simbolo_pesos"
        android:textAlignment="textEnd"
        android:textColor="#676f73"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_result_precio_unidad"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_precio_unidad"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/txt_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_product"
        android:text="@string/total"
        android:textAlignment="textStart"
        android:textColor="#676f73"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_descuento_producto"
        app:layout_constraintVertical_bias="0.158"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_result_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/total"
        android:textAlignment="textEnd"
        android:textColor="#232425"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_result_descuento"
        app:layout_constraintVertical_bias="0.158"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_descuento_producto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_product"
        android:text="@string/descuento"
        android:textAlignment="textStart"
        android:textColor="#676f73"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_subtotal"
        app:layout_constraintVertical_bias="0.168"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_product"
        android:text="@string/subtotal"
        android:textAlignment="textStart"
        android:textColor="#676f73"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_result_producto"
        app:layout_constraintVertical_bias="0.116"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_result_precio_unidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/precio_unit"
        android:textAlignment="textEnd"
        android:textColor="#232425"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_total_pago"
        app:layout_constraintVertical_bias="0.222"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_result_cantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/cantidad_de_productos"
        android:textAlignment="textStart"
        android:textColor="#232425"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_total_pago"
        app:layout_constraintVertical_bias="0.222"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_precio_unidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precios"
        android:textColor="#62696C"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_result_precio_unidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.679"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_total_pago"
        app:layout_constraintVertical_bias="0.631" />

    <Button
        android:id="@+id/btn_regresar"
        android:layout_width="145dp"
        android:layout_height="58dp"
        android:backgroundTint="#8121EE"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/regresar"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:cornerRadius="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_total"
        app:layout_constraintVertical_bias="0.406" />

    <TextView
        android:id="@+id/txt_total_pago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/quot_total_a_pagar_quot"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148" />

</androidx.constraintlayout.widget.ConstraintLayout>