<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3EEF8"
    tools:context=".InterfazDatos">

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="145dp"
        android:layout_height="58dp"
        android:backgroundTint="#8121EE"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/calcular"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:cornerRadius="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_descuento"
        app:layout_constraintVertical_bias="0.359" />

    <EditText
        android:id="@+id/editText_producto"
        android:layout_width="173dp"
        android:layout_height="42dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_mis_ventas"
        app:layout_constraintVertical_bias="0.132"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txt_descuento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descuento"
        android:textColor="#676f73"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_precio"
        app:layout_constraintVertical_bias="0.174" />

    <TextView
        android:id="@+id/txt_simbolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simbolo_porcentaje"
        android:textColor="#676f73"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editText_descuento"
        app:layout_constraintHorizontal_bias="0.959"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_precio"
        app:layout_constraintVertical_bias="0.16" />

    <TextView
        android:id="@+id/txt_producto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/producto"
        android:textColor="#676f73"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_mis_ventas"
        app:layout_constraintVertical_bias="0.155" />

    <TextView
        android:id="@+id/txt_cantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantidad"
        android:textColor="#676f73"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_producto"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/txt_precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio"
        android:textColor="#676f73"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cantidad"
        app:layout_constraintVertical_bias="0.129" />

    <TextView
        android:id="@+id/txt_mis_ventas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/mis_ventas"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

    <EditText
        android:id="@+id/editText_precio"
        android:layout_width="174dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.759"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_cantidad"
        app:layout_constraintVertical_bias="0.087"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editText_cantidad"
        android:layout_width="173dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_producto"
        app:layout_constraintVertical_bias="0.045"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editText_descuento"
        android:layout_width="118dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.802"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_precio"
        app:layout_constraintVertical_bias="0.13"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>